# vectorDB

./: README.md  ingestion.py  main.py  pyproject.toml
backend/: core.py
chroma_db/ff0babb5-854a-4f70-8280-f186b05710e1/: index_metadata.pickle
